--- a/index.html
+++ b/index.html
@@ -8,6 +8,7 @@
 
     <link rel="stylesheet" href="assets/css/slick.css">
     <link rel="stylesheet" href="assets/css/style.css">
+    <link rel="stylesheet" href="assets/css/aos.css">
 
     <meta name="viewport" content="device-width, initial-scale=1">
     <title>CenterLogistic</title>
@@ -55,7 +56,7 @@
             <div class="container">
                 <div class="intro__inner">
 
-                    <div class="request-form request-form--intro">
+                    <div class="request-form request-form--intro" data-aos="fade-right">
                         <div class="request-form__header">
                             <h3 class="request-form-title">Get Callback</h3>
                             <div class="request-form__text">Lorem ipsum dolor sit amet, consetetur sadipscing elitr, sed diam nonumy eirmod tempor invidunt ut</div>
@@ -81,7 +82,7 @@
 
                     </div><!-- /request-form -->
 
-                    <div class="intro__text">
+                    <div class="intro__text" data-aos="fade-left">
                         <div class="intro__countries">
                         USA, Europe, Asia
                         </div>
@@ -106,7 +107,7 @@
                 <div class="services">
                     <h2 class="services__main-title">Services</h2>
 
-                    <div class="services__item">
+                    <div class="services__item" data-aos="fade-down">
                         <h4 class="services__title">Ground shipping</h4>
                         <div class="services__text">
                             <p>Lorem ipsum dolor sit amet, consetetur sadipscing elitr, sed diam nonumy eirmod tempor invidunt ut labore et dolore magna aliquyam</p>
@@ -116,7 +117,7 @@
                         </div>
                     </div>
 
-                    <div class="services__item">
+                    <div class="services__item" data-aos="fade-down" data-aos-delay="100">
                         <h4 class="services__title">Railway shipping</h4>
                         <div class="services__text">
                             <p>Lorem ipsum dolor sit amet, consetetur sadipscing elitr, sed diam nonumy eirmod tempor invidunt ut </p>
@@ -126,7 +127,7 @@
                         </div>
                     </div>
 
-                    <div class="services__item">
+                    <div class="services__item" data-aos="fade-down" data-aos-delay="200">
                         <h4 class="services__title">Water shipping</h4>
                         <div class="services__text">
                             <p>Lorem ipsum dolor sit amet, consetetur sadipscing elitr, sed diam nonumy eirmod tempor invidunt ut labore et dolore magna aliquyam</p>
@@ -136,7 +137,7 @@
                         </div>
                     </div>
 
-                    <div class="services__item">
+                    <div class="services__item" data-aos="fade-down" data-aos-delay="300">
                         <h4 class="services__title">Air shipping</h4>
                         <div class="services__text">
                             <p>Lorem ipsum dolor sit amet, consetetur sadipscing elitr, sed diam nonumy eirmod tempor invidunt </p>
@@ -158,49 +159,49 @@
                 <div class="clients">
                     <div class="clients__logo">
                         <ul class="clients__list">
-                            <li>
+                            <li data-aos="fade-right" data-aos-anchor=".clients">
                                 <a href="#" target="_blank">
                                     <img class="clients__list-logo img" src="assets/images/clients/atica.svg" alt="">
                                 </a>
                             </li>
 
-                            <li>
+                            <li data-aos="fade-right" data-aos-delay="50" data-aos-anchor=".clients">
                                 <a href="#" target="_blank">
                                     <img class="clients__list-logo img" src="assets/images/clients/hex-lab.svg" alt="">
                                 </a>
                             </li>
 
-                            <li>
+                            <li data-aos="fade-right" data-aos-delay="100" data-aos-anchor=".clients">
                                 <a href="#" target="_blank">
                                     <img class="clients__list-logo img" src="assets/images/clients/amara.svg" alt="">
                                 </a>
                             </li>
 
-                            <li>
+                            <li data-aos="fade-right" data-aos-delay="150" data-aos-anchor=".clients">
                                 <a href="#" target="_blank">
                                     <img class="clients__list-logo img" src="assets/images/clients/muzica-2.svg" alt="">
                                 </a>
                             </li>
 
-                           <li>
+                           <li data-aos="fade-right" data-aos-delay="200" data-aos-anchor=".clients">
                                 <a href="#" target="_blank">
                                     <img class="clients__list-logo img" src="assets/images/clients/solaytic.svg" alt="">
                                 </a>
                             </li>
 
-                           <li>
+                           <li data-aos="fade-right" data-aos-delay="250" data-aos-anchor=".clients">
                                 <a href="#" target="_blank">
                                     <img class="clients__list-logo img" src="assets/images/clients/hexa.svg" alt="">
                                 </a>
                             </li>
 
-                            <li>
+                            <li data-aos="fade-right" data-aos-delay="300" data-aos-anchor=".clients">
                                 <a href="#" target="_blank">
                                     <img class="clients__list-logo img" src="assets/images/clients/utosia-2.svg" alt="">
                                 </a>
                             </li>
 
-                            <li>
+                            <li data-aos="fade-right" data-aos-delay="350">
                                 <a href="#" target="_blank">
                                     <img class="clients__list-logo img" src="assets/images/clients/fox-hub.svg" alt="">
                                 </a>
@@ -260,25 +261,25 @@
 
                 <div class="benefits__col">
                     <ul class="benefits-list">
-                        <li class="benefits-list__item">
+                        <li class="benefits-list__item" data-aos="fade-down" data-aos-anchor=".benefits">
                             <h4 class="benefits-list__title">Safety</h4>
                             <div class="benefits-list__text">
                                 <p>Lorem ipsum dolor sit amet, consetetur sadipscing elitr, sed diam nonumy eirmod tempor invidunt ut labore et dolore magna aliquyam</p>
                             </div>
                         </li>
-                        <li class="benefits-list__item">
+                        <li class="benefits-list__item" data-aos="fade-down" data-aos-delay="100" data-aos-anchor=".benefits">
                             <h4 class="benefits-list__title">High quality drivers</h4>
                             <div class="benefits-list__text">
                                 <p>Lorem ipsum dolor sit amet, consetetur sadipscing elitr, sed diam nonumy eirmod tempor invidunt ut labore et dolore magna aliquyam</p>
                             </div>
                         </li>
-                        <li class="benefits-list__item">
+                        <li class="benefits-list__item" data-aos="fade-down" data-aos-delay="200" data-aos-anchor=".benefits">
                             <h4 class="benefits-list__title">Guarantee &amp; Support 24/7</h4>
                             <div class="benefits-list__text">
                                 <p>Lorem ipsum dolor sit amet, consetetur sadipscing elitr, sed diam nonumy eirmod tempor invidunt ut labore et dolore magna aliquyam</p>
                             </div>
                         </li>
-                        <li class="benefits-list__item">
+                        <li class="benefits-list__item" data-aos="fade-down" data-aos-delay="300" data-aos-anchor=".benefits">
                             <h4 class="benefits-list__title">Personal manager</h4>
                             <div class="benefits-list__text">
                                 <p>Lorem ipsum dolor sit amet, consetetur sadipscing elitr, sed diam nonumy eirmod tempor invidunt ut labore et dolore magna aliquyam</p>
@@ -302,7 +303,7 @@
 
            <div class="team">
                <div class="team__col">
-                   <div class="team__item">
+                   <div class="team__item" data-aos="fade-in">
                        <img class="img team__photo" src="assets/images/team/team_1.jpg" alt="">
                        <div class="team__name">John Smith</div>
                        <div class="team__prof">Logistic manager - 8 years experience</div>
@@ -319,7 +320,7 @@
                </div>
 
                <div class="team__col">
-                       <div class="team__item">
+                       <div class="team__item" data-aos="fade-in" data-aos-delay="100">
                             <img class="img team__photo" src="assets/images/team/team_2.jpg" alt="">
                            <div class="team__name">Daniel Kore</div>
                            <div class="team__prof">Software engineer</div>
@@ -336,7 +337,7 @@
                </div>
 
            <div class="team__col">
-                   <div class="team__item">
+                   <div class="team__item" data-aos="fade-in" data-aos-delay="200">
                        <img class="img team__photo" src="assets/images/team/team_3.jpg" alt="">
                        <div class="team__name">Anna Filler</div>
                        <div class="team__prof">Marketing specialist - 10 years experience</div>
@@ -361,7 +362,7 @@
     <section class="section" id="mission" data-scrollspy="#mission">
         <div class="container">
             <h2 class="missin-title">Our mission</h2>
-            <div class="mission">
+            <div class="mission" data-aos="fade-up" data-aos-duration="1250">
                 <h3 class="mission__title">To provide our customer qualified services according the international</h3>
                 <h4 class="mission__subtitle">Book your Cargo now &amp; Your job just got a lot easier</h4>
             </div>
@@ -381,7 +382,7 @@
 
             <div class="article">
 
-                <article class="article__item">
+                <article class="article__item" data-aos="fade-up">
                     <h4 class="article__title">
                         <a href="#">News title</a>
                     </h4>
@@ -391,7 +392,7 @@
                     <time class="article__date" pupdate="21-03-2019 19:00">21 March, 2019</time>
                 </article>
 
-                <article class="article__item">
+                <article class="article__item" data-aos="fade-up">
                     <h4 class="article__title">
                         <a href="#">News title</a>
                     </h4>
@@ -504,6 +505,7 @@
 
 <script src="https://code.jquery.com/jquery-3.5.1.min.js"></script>
 <script src="assets/js/slick.min.js"></script>
+<script src="assets/js/aos.js"></script>
 <script src="assets/js/app.js"></script>
 
 
