--- a/blog.html
+++ b/blog.html
@@ -27,8 +27,9 @@
     <header class="header" id="header">
         <div class="container">
             <div class="header__inner">
-                <a href="index.html">
+                <a class="header__logo" href="#" data-scroll="#intro">
                     <img src="assets/images/logo.svg" alt="CenterLogistic">
+                    <span class="header__logo-text">CenterLogistic</span>
                 </a>
 
                 <nav class="nav" id="nav">
@@ -139,7 +140,10 @@
     <!-- Footer -->
     <footer class="footer">
         <div class="container">
-            <img src="assets/images/logo-black.svg" alt="logo">
+                <a class="header__logo header__logo-black" href="#" data-scroll="#intro">
+                    <img src="assets/images/logo-black.svg" alt="CenterLogistic">
+                    <span class="header__logo-text">CenterLogistic</span>
+                </a>
             <address class="footer__contakts">
                 <p>New York, Street, ZIP code</p>
                 <p>
